# npmai-module-

./: README.md  app.py  main.py  npmai.py  pyproject.toml  requirements.txt
npmai/: __init__.py
