[project]
name = "npmai"                                     
version = "0.0.1"                                   
description = "Free AI: Gemini, ChatGPT, Grok via browser"  
authors = [{ name = "Sonu Kumar", email = "sonuramashishnpm@gmail.com" }] 
keywords = ["ai", "gemini", "chatgpt", "grok", "selenium", "llm"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "langchain-core>=0.2.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/sonuramashishnpm/npmai"   # â† 2. APNA GITHUB LINK DAAL
Repository = "https://github.com/sonuramashishnpm/npmai"
Issues = "https://github.com/sonuramashishnpm/npmai/issues"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
