[project]
name = "npmai"
version = "0.0.1"
description = "Browser-based free AI automation for Gemini, ChatGPT, Grok, and Perplexity using Selenium."
authors = [
    { name = "Sonu Kumar Ramashish", email = "sonuramashishnpm@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

keywords = [
    "ai",
    "gemini",
    "chatgpt",
    "grok",
    "perplexity",
    "selenium",
    "automation",
    "browser-ai",
    "llm",
    "langchain"
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "langchain-core>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/sonuramashishnpm/npmai"
Repository = "https://github.com/sonuramashishnpm/npmai"
Issues = "https://github.com/sonuramashishnpm/npmai/issues"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"